--- a/metadata.yaml
+++ b/metadata.yaml
@@ -24,5 +24,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Illustrated periodicals -- France'
 - !lcc 'AP'
+- GITenberg
 title: L'Illustration, No. 3661, 26 Avril 1913
 url: http://www.gutenberg.org/ebooks/38002
